# sound-imagine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  SoundImagine.jucer  cmake.ps1  cmake.sh  exec.sh  format.ps1  format.sh
Builds/LinuxMakefile/: Makefile
Builds/VisualStudio2022/: SoundImagine.sln  SoundImagine_LV2ManifestHelper.vcxproj  SoundImagine_LV2Plugin.vcxproj  SoundImagine_SharedCode.vcxproj  SoundImagine_SharedCode.vcxproj.filters  SoundImagine_StandalonePlugin.vcxproj  SoundImagine_VST3.vcxproj  SoundImagine_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h
Source/: CMakeLists.txt  CmakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/component/: GLTest.cpp  Imager.cpp  LRImager.cpp  ThreeImager.cpp
Source/include/: AudioUtilities.h  PluginEditor.h  PluginProcessor.h
Source/include/component/: GLTest.h  Imager.h  LRImager.h  ThreeImager.h
Source/include/lib/: AudioUtilities.h  Constant.h  Manager.h  Processor.h  Shader.h  SharedAudioData.h
Source/lib/: AudioUtilities.cpp  Manager.cpp  Processor.cpp  Shader.cpp  SharedAudioData.cpp
Source/shader/: fragment.glsl  vertex.glsl
